[package]
name = "rsk-simulation"
version = "0.1.0"
edition = "2021"

[features]
# GUIs
gui = []
bevy_gui = ["dep:bevy", "gui"]
http_gui = [
    "gui",
    "http",
    "bitcode",

    # Web socket
    "dep:websocket",
    "dep:tokio-tungstenite",

    # wasm-server-runner
    "dep:anyhow",
    #"dep:tracing",
    "dep:tracing-subscriber",
    "dep:wasm-bindgen-cli-support",
    "dep:axum",
    "dep:axum-extra",
    "dep:axum-server",
    "dep:axum-server-dual-protocol",
    "dep:directories",
    "dep:tokio",
    "dep:tower-http",
    "dep:http",
    "dep:tower",
    "dep:fastrand",
    "dep:rcgen"
]

# Game controllers
standard_gc = []
http_gc = [
    "async",
    "http",
    "dep:wasm-sockets",
    "dep:wasm-bindgen-futures",
    "dep:futures",
    "dep:gloo-timers",
    "bitcode"
]

serde = ["dep:serde", "rapier2d/serde-serialize"]
json = ["serde", "dep:serde_json"]
http = []
bitcode = ["serde", "dep:bitcode"]
async = []

default_server = ["standard_gc", "http_gui"]
default_client = ["http_gc", "bevy_gui"]
default = ["default_server"]

[dependencies]
rapier2d = { version = "0.18.0", features = ["simd-stable"] }
tracing = "0.1"
nalgebra = { version = "0.32.5", features = ["convert-glam025"] }

bevy = { version = "0.13.2", features = ["jpeg"], optional = true }

# serde
serde = { version = "1.0.198", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
bitcode = { version = "0.6", features = ["serde"], optional = true }

# Web socket (server)
websocket = { version = "0.27", default-features = false, features = ["sync"], optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }

# Web socket (client)
wasm-sockets = { version = "1.0", optional = true }

# Wasm async
futures = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# wasm-server-runner
anyhow = { version = "1.0", optional = true }
# tracing = { version = "0.1", default-features = false, features = ["release_max_level_debug"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
wasm-bindgen-cli-support = { version = "0.2", optional = true }
axum = { version = "0.7", default-features = false, features = ["http1", "ws"], optional = true }
axum-extra = { version = "0.9", features = [], optional = true }
axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
axum-server-dual-protocol = { version = "0.6", optional = true }
directories = { version = "5", optional = true }
tower-http = { version = "0.5", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread"], optional = true }
http = { version = "1.1", optional = true }
tower = { version = "0.4", optional = true }
fastrand = { version = "2.0", optional = true }
rcgen = { version = "0.12", default-features = false, features = ["ring"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
wasm_thread = "0.3.0"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
